--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,9 @@
 			<span></span>
 			<span></span>
 			<ul>
-                <li><a href="\">Home</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/dictionary">Dictionary</a></li>
+                <li><a href="/login">Log in</a></li>
 
 			</ul>
 		</nav>
@@ -40,7 +42,7 @@
 
 		<footer>
 			<p>
-				&copy; Enter your name here 2020
+				&copy; Alexi Halikias 2022
 			</p>
 		</footer>
 
