--- a/templates/login.html
+++ b/templates/login.html
@@ -1,23 +1,24 @@
 {% extends "base.html" %}
 
-{% block title %}Maōri Dictionary | Log in{% endblock %}
-
-{% block heading %}Maōri - English Dictionary{% endblock %}
+{% block pageheading %}
+Login
+{% endblock %}
 
 {% block main %}
-<form class="myform">
+<form class="myform" method="POST">
     <div class="form-group">
         <div class="form-label">Email: </div>
-        <div class="form-element"><input type="email"> </div>
+        <div class="form-element"><input id="email" name="email" type="email"> </div>
     </div>
 
     <div class="form-group">
         <div class="form-label">Password: </div>
-        <div class="form-element"><input type="password"> </div>
+        <div class="form-element"><input id="password" name="password" type="password"> </div>
     </div>
 
     <div class="button-group">
         <input type="submit" value="Submit"> or <a href="/signup">sign up</a>
+        <input type="reset" value=" Reset">
     </div>
 
 </form>
