--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,6 +22,13 @@ Sign Up
     </div>
 
     <div class="form-group">
+        <label for="editor">Are you a teacher or student?</label>
+        <select name="editor" id="editor">
+            <option value="Teacher">Teacher</option>
+            <option value="Student">Student</option>
+        </select>
+
+    <div class="form-group">
         <div class="form-label">Password: </div>
         <div class="form-element"><input id="pass" name="pass" type="password" required> </div>
     </div>
